# docling-pipelines

./: .gitignore  AGENTS.md  README.md  pyproject.toml
pdf/: README.md
src/docling_pdf2md/: __init__.py  cache.py  conversion.py  converter.py  images.py  markdown.py  models.py
src/docling_pipelines/: cli.py  models.py  paths.py  pipeline.py  reporting.py  text_utils.py  transforms.py
src/docling_pipelines/code/: detection.py  markdown_blocks.py
src/docling_pipelines/lambda_note/: __init__.py  audit.py  catalog.py  markdown.py  pipeline.py
src/docling_pipelines/lambda_note/isbn978_4_908686_06_1/: __init__.py  pipeline.py
src/docling_pipelines/lambda_note/isbn978_4_908686_16_0/: __init__.py  cli.py  pipeline.py
src/docling_pipelines/lambda_note/specs/: __init__.py  isbn978_4_908686_06_1.py  isbn978_4_908686_16_0.py
src/docling_pipelines/markdown/: index.py  polish.py  toc.py
src/docling_pipelines/oreilly/: __init__.py  catalog.py  pipeline.py  transforms.py
src/docling_pipelines/oreilly/isbn978_4_87311_758_4/: pipeline.py
src/docling_pipelines/oreilly/isbn978_4_87311_836_9/: pipeline.py
src/docling_pipelines/oreilly/isbn978_4_87311_906_9/: pipeline.py
src/docling_pipelines/oreilly/markdown/: __init__.py  index.py  polish.py  toc.py
src/docling_pipelines/oreilly/repairs/: index_common.py
src/docling_pipelines/oreilly/repairs/isbn978_4_87311_758_4/: document.py  index.py  markdown.py  toc.py
src/docling_pipelines/oreilly/specs/: isbn978_4_87311_758_4.py  isbn978_4_87311_836_9.py  isbn978_4_87311_906_9.py
tests/: test_refactor_behaviour.py
(+3 files in other folders)
